^ floating class when scrolling so that negative margins prevent container overflow.

--- a/Content/site.css
+++ b/Content/site.css
@@ -68,6 +68,7 @@ a:focus {
 .floating {
     position: fixed;
     top: 100px;
+    margin: 0 -15px;
 }
 @media (max-width: 990px){
     body {
